data/issues_nolabel/nolabel_test_1023.txt
Fix for python3 syntax incompatibility.

Encountered a syntax error while following "Getting started" tutorial with python3:
$ python convolutional.py
Traceback (most recent call last):
File "convolutional.py", line 31, in 
import tensorflow.python.platform
File "/Users/povi/Library/Developer/virtual_envs/py3/lib/python3.5/site-packages/tensorflow/init.py", line 23, in 
from tensorflow.python import *
File "/Users/povi/Library/Developer/virtual_envs/py3/lib/python3.5/site-packages/tensorflow/python/init.py", line 73, in 
from tensorflow.python.training import training as train
File "/Users/povi/Library/Developer/virtual_envs/py3/lib/python3.5/site-packages/tensorflow/python/training/training.py", line 149, in 
from tensorflow.python.training.saver import generate_checkpoint_state_proto
File "/Users/povi/Library/Developer/virtual_envs/py3/lib/python3.5/site-packages/tensorflow/python/training/saver.py", line 1077
except Exception, e:  # pylint: disable=broad-except
^
SyntaxError: invalid syntax
Fixed it, so it would be python 2 & 3 compatible.